2001-03-16  Michael Thome  <mthome@bbn.com>

	* IncrementalSubscription
	Changes get*Collection accessors to return empty collections
	rather than nulls.  Bug 164.

2001-03-01  Ray Tomlinson  <RTomlinson@bbn.com>

	* PublishException -- et. al.
	Add boolean to PublishException indicating whether the lack of a
	prior publisher is because prior publishers are not being saved or
	because there was not prior publisher. The exception message
	reflects this difference.

	* release
	Released MB 7.0.1
	
2001-02-27  Michael Thome  <mthome@bbn.com>
	
	* SharedPlugInManager
	Upped warning time to 2 minutes.  Changable via 
	-Dorg.cougaar.core.cluster.SharedPlugInManager.warningTime=N where
	N is milliseconds the plugin has to run before being suspect.
	Also aded a control for dumping the stats file separate from
	collection. -Dorg.cougaar.core.cluster.SharedPlugInManager.dumpStatistics=false

	* org.cougaar.util.PropertyParser
	Finally created this utility for parsing out values of various
	types from java.util.Properties.  By default, takes from System
	properties.  Doesn't reimplement facilities already found
	elsewhere, e.g. getString and no-default property getters.

	* PublishHistory
	New facility to assist in debugging publishing errors.

	PublishHistory keeps a stack dump for the most recent add, change,
	and publish events for an object. The stack dumps are flushed
	after a minute of inactivity for the object. The stack dumps for
	any particular object may be dumped as needed.
	
	A PublishHistory object may be instantiated in the Distributor and
	accessed from the Subscriber (for saving publishing events) and
	from the ALPPlan. The interfaces for the ALPPlan and LogPlan have
	been augmented to allow the history object to be retrieved.
	
	The ComplainingLP has been modified to use to dump the recent
	stack traces for objects about which it complains.

	The history object is only instantiated if
	-Dorg.cougaar.core.cluster.publishHistory=true
